--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   http: ^0.12.0+4
   json_annotation: ^3.0.1
+  powers: ^0.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -35,6 +36,7 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^1.8.1
   json_serializable: ^3.3.0
+  powers: ^0.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
