Made the "play again" button show up if the match ends in a draw in the 03/TicTacToe game

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: currency_convertor
+name: GADlab
 description: My first Flutter project that is actually building
 
 # The following line prevents the package from being accidentally published to
