--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,19 +23,27 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.12.0+4
-  json_annotation: ^3.0.1
+  http: ^0.12.2
+  json_annotation: ^3.1.1
   powers: ^0.1.0
-  assets_audio_player: ^2.0.13
+  assets_audio_player: ^2.0.13+1
+  redux: ^4.0.0+3
+  flutter_redux: ^0.7.0
+  built_value: ^7.1.0
+  built_collection: ^4.3.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
+
   flutter_test:
     sdk: flutter
-  build_runner: ^1.8.1
+  build_runner: ^1.10.0
+  json_serializable: ^3.5.1
+  built_value_generator: ^7.1.0
+
 
 
 # For information on the generic Dart part of this file, see the
